musik funktioniert komplett, kleiner bug noch aber fixxe ich die tage, nichts großes + geloggt ist es auch schon